syntax = "proto3";

package turnly.memberships.v1.agents;

message GetAgentRequest {
  string id = 1;
}

message GetAgentByUserIdRequest {
  string user_id = 1;
}
